@@ -29,7 +29,6 @@
 
 #include <krb5/krb5.h>
 #include <krb5/asn1.h>
-#include <krb5/crc-32.h>
 #include <krb5/los-proto.h>
 #include <krb5/ext-proto.h>
 
