@@ -210,7 +210,6 @@ struct winsize {
 #include <krb5/krb5.h>
 #include <krb5/osconf.h>
 #include <krb5/asn1.h>
-#include <krb5/crc-32.h>
 #include <krb5/mit-des.h>
 #include <krb5/los-proto.h>
 #include <kerberosIV/krb.h>
