@@ -57,7 +57,6 @@ char copyright[] =
 #ifdef KERBEROS
 #include <krb5/krb5.h>
 #include <krb5/asn1.h>
-#include <krb5/crc-32.h>
 #include <krb5/mit-des.h>
 #include <krb5/osconf.h>
 #include <com_err.h>
